<resources>
    <string name="app_name">PSP Launcher</string>
    <string name="name">John Doe</string>
    <string name="time">08:00:00 WIB</string>
    <string name="absen">Absen Masuk</string>
    <string name="date">05/12/2024</string>
    <string name="clockIn">08:42</string>
    <string name="input_text">Input...</string>
    <string name="back_text">Kembali</string>
    <string name="next_text">Lanjutkan</string>
    <string name="create_time">9 Desember 2025; 09:00</string>
    <string name="longitude">-74395730574307543</string>
    <string name="latitude">1109382480304</string>
    <string name="instruction">Posisikan wajah di dalam kotak</string>
    <string name="copyright">Copyright by \nPT Teknologi Kartu Indonesia</string>

</resources>