<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp"
    tools:context=".ui.main.menu.MenuActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardImgProfile"
                app:layout_constraintEnd_toStartOf="@+id/cardImgProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardImgProfile"
                tools:text="@string/name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardImgProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:alpha="0.2"
                android:background="@color/text_gray"
                app:layout_constraintTop_toBottomOf="@+id/cardImgProfile" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAbsenAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:strokeColor="@color/orange_primary"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnAbsen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardBtnAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <ImageView
                            android:id="@+id/iconAction"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@color/orange_primary"
                            android:contentDescription="Icon Absen"
                            android:padding="10dp"
                            android:src="@drawable/ic_login_person" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tvActionTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/absen"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvActionTime"
                        app:layout_constraintEnd_toStartOf="@+id/cardArrow"
                        app:layout_constraintStart_toEndOf="@id/cardBtnAction"
                        app:layout_constraintTop_toTopOf="@id/cardBtnAction"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tvActionTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/text_gray_light"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@id/cardBtnAction"
                        app:layout_constraintEnd_toStartOf="@+id/cardArrow"
                        app:layout_constraintStart_toEndOf="@id/cardBtnAction"
                        app:layout_constraintTop_toBottomOf="@+id/tvActionTitle"
                        tools:text="@string/time" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:background="@color/orange_primary"
                            android:contentDescription="Arrow Action"
                            android:padding="6dp"
                            android:src="@drawable/ic_arrow_right"
                            app:tint="@color/white" />

                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="Riwayat Hari Ini"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle"
        tools:itemCount="1"
        tools:listitem="@layout/item_absen_riwayat" />

    <LinearLayout
        android:id="@+id/EmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:alpha="0.6"
            android:contentDescription="Data Kosong"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="Data tidak ditemukan"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red_danger"
        android:text="Logout"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="32dp"
        app:icon="@drawable/ic_logout"
        app:iconGravity="start"
        app:iconSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCopyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/text_copyright"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>